feat(server): 部署配置优化与功能增强
- 添加后端 .env.example 配置模板文件
- 更新前端生产环境 API 地址配置
- 在后端 .gitignore 中添加 .env 文件忽略规则
- 为 AI 咨询页面添加快速操作按钮功能
- 优化 API 调用路径和调试日志输出
- 改进前端 Dashboard 页面布局和组件结构
- 实现营养摄入进度可视化展示
- 添加健康转盘和每日健康提示功能
- 创建服务器部署说明文档 DEPLOY_INSTRUCTIONS.md
- 移除开发环境相关配置文件
- 优化后端 API 状态检测机制